# bashformer

./: AGENTS.md  CHANGELOG.md  PLAN.md  README.md  bashformer.sh  breakout_c.c  breakout_power  daw.c  flappy_c.c  generate_sfx  generate_sfx.c  index.tsx  kong  kong_sdl  kong_sdl.build_log  kong_sdl.c  package.json  sitrep.md  sprite_editor  tetris_c  tetris_c.c  tetris_raylib.c  vex.c
.hustlemc/: status.json
__tests__/: config.test.ts
cbreakout/: breakout  breakout_power_c.c
cdaw/: beat.pattern  daw  generate_midi  generate_midi.c
cdraw/: sprite_editor.c
cflap/: flappy_c
kong_sdl/: README.md  STRUCTURE.md
kong_sdl/android/: README.md
kong_sdl/android/app/: build.gradle
kong_sdl/android/app/src/main/: AndroidManifest.xml
kong_sdl/android/app/src/main/jni/: Android.mk  CMakeLists.txt  kong_game_jni.c  platformer_game_jni.c
kong_sdl/ios/: README.md
kong_sdl/ios/KongSDL/: AppDelegate.swift  GameViewController.swift
kong_sdl/ios/PlatformerSDL/: GameScene.swift  GameState.swift
kong_sdl/shared/: kong_sdl.c
untitled/: README.md
vex_sdl/: README.md  STRUCTURE.md
vex_sdl/android/: README.md
vex_sdl/android/app/: build.gradle
vex_sdl/android/app/src/main/: AndroidManifest.xml
vex_sdl/android/app/src/main/jni/: Android.mk  CMakeLists.txt  vex_game_jni.c  vex_game_jni_old.c
vex_sdl/ios/: README.md
vex_sdl/ios/VexSDL/: AppDelegate.swift  GameScene.swift  GameState.swift  GameViewController.swift
vex_sdl/shared/: kong_sdl_binary  vex.c
vex_sdl/shared/sound/: bgmusic.mid
(+6 files in other folders)
